
(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

*** General ***

* Old-style inner comments (* ... *) within the term language are no
longer supported (legacy feature in Isabelle2018).


*** Isar ***

* More robust treatment of structural errors: begin/end blocks take
precedence over goal/proof.


*** HOL ***

* Simplified syntax setup for big operators under image. In rare
situations, type conversions are not inserted implicitly any longer
and need to be given explicitly. Auxiliary abbreviations INFIMUM,
SUPREMUM, UNION, INTER should now rarely occur in output and are just
retained as migration auxiliary. INCOMPATIBILITY.

* Sledgehammer: The URL for SystemOnTPTP, which is used by remote
provers, has been updated.

* Facts sum_mset.commute and prod_mset.commute renamed to sum_mset.swap
and prod_mset.swap, similarly to sum.swap and prod.swap.
INCOMPATIBILITY.

* Theory "HOL-Library.Multiset": the <Union># operator now has the same
precedence as any other prefix function symbol.


*** ML ***

* Original PolyML.pointerEq is retained as a convenience for tools that
don't use Isabelle/ML (where this is called "pointer_eq").

* ML evaluation (notably via commands 'ML' and 'ML_file') is subject to
option ML_environment to select a named environment, such as "Isabelle"
for Isabelle/ML, or "SML" for official Standard ML. It is also possible
to move toplevel bindings between environments, using a notation with
">" as separator. For example:

  declare [[ML_environment = "Isabelle>SML"]]
  ML \<open>val println = writeln\<close>

  declare [[ML_environment = "SML"]]
  ML \<open>println "test"\<close>

  declare [[ML_environment = "Isabelle"]]
  ML \<open>println\<close>  \<comment> \<open>not present\<close>

The Isabelle/ML function ML_Env.setup defines new ML environments. This
is useful to incorporate big SML projects in an isolated name space, and